<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LootHelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dados_item">Cadastro de Item</string>
    <string name="title_activity_dados_personagem">Vincule ao personagem</string>
    <string name="title_activity_editar_loot">Edite O registro</string>
    <string name="title_activity_listar_loot">Lista de registros de Loot</string>
    <string name="itemMenu">Cadastrar Item</string>
    <string name="personagemMenu">Vincular Item ao Personagem</string>
    <string name="cadastrarMenu">Cadastrar Loot</string>
    <string name="listarLoots">Listar Loots</string>
    <string name="sair">Sair</string>
    <string name="personagem">Personagem</string>
    <string name="digitePersonagem">Digite o nome do personagem</string>
    <string name="level">Level do personagem</string>
    <string name="digiteLvl">Digite o level do personagem</string>
    <string name="enviar">Enviar</string>
    <string name="editar">Editar Registro</string>
    <string name="item">Item / Nome</string>
    <string name="digiteItem">Digite o nome do item</string>
    <string name="tipo">Tipo</string>
    <string name="digiteTipo">Digite o tipo do item</string>
    <string name="dano">Dano</string>
    <string name="about">Sobre a App</string>
    <string name="digiteDano">Digite o Dano do item</string>
    <string name="fechar">Fechar</string>
    <string name="title_activity_about">Sobre a aplicação Loot</string>
     <string name="linkprojeto">https://www.fluidui.com/editor/live/preview/p_KSP6qnaTbgwraLxT4oE04BT0F8d4LlNx.1449255956176</string>
    <string name="aboutApp">A aplicação tem como objetivo Auxíliar jogadores de RPG, com ela é possível adicionar loots preenchendo os campos, edita-los, exclui-los e lista-los, ótimo para registros rápidos após a jogatina  </string>

</resources>
