<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
      android:background = "@drawable/background03"
    tools:context="com.example.loothelper.EditarLootActivity" >

     <TextView
        style="@android:style/TextAppearance.Holo.Widget.TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/personagem" />

    <EditText
        android:id="@+id/editPersonagem"
        style="@android:style/TextAppearance.Holo.Widget.EditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digitePersonagem" />

    <TextView
        style="@android:style/TextAppearance.Holo.Widget.TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level" />

    <EditText
        android:id="@+id/editLvl"
        style="@android:style/TextAppearance.Holo.Widget.EditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digiteLvl" />


    <TextView
        style="@android:style/TextAppearance.Holo.Widget.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item" />

    <EditText
        android:id="@+id/editItem"
        style="@android:style/TextAppearance.Holo.Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digiteItem" />
    
     <TextView
        style="@android:style/TextAppearance.Holo.Widget.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dano" />

    <EditText
        android:id="@+id/editDano"
        style="@android:style/TextAppearance.Holo.Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digiteDano" />

    <TextView
        style="@android:style/TextAppearance.Holo.Widget.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo" />

    <EditText
        android:id="@+id/editTipo"
        style="@android:style/TextAppearance.Holo.Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digiteTipo" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
          android:drawableLeft="@android:drawable/ic_menu_edit"
        android:onClick="editar"
        android:text="@string/editar" />

</LinearLayout>
